--- a/pages/my-first-project/index.html
+++ b/pages/my-first-project/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>My First Project</title>
     <style>
-        body { font-family: sans-serif; display: grid; place-content: center; min-height: 100vh; margin: 0; background-color: #f0f8ff; }
+        body { font-family: sans-serif; display: grid; place-content: center; min-height: 100vh; margin: 0; background-color: #f0f8ff; text-align: center; }
         h1 { color: #333; }
+        p { color: #555; }
     </style>
 </head>
 <body>
     <h1>Hello from My First Project!</h1>
+    <p>This is a self-contained page.</p>
 </body>
 </html>
