--- a/pages/cat.Lifestyle/dumbell-routine/index.html
+++ b/pages/cat.Lifestyle/dumbell-routine/index.html
@@ -5,234 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Dumbbell Routine - 20lb Workout</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #2c3e50;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            overflow: hidden;
-        }
-
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            font-weight: 700;
-        }
-
-        .header p {
-            font-size: 1.2em;
-            opacity: 0.9;
-        }
-
-        .routine-info {
-            background: #f8f9fa;
-            padding: 20px 30px;
-            border-bottom: 3px solid #667eea;
-        }
-
-        .routine-info h2 {
-            color: #667eea;
-            margin-bottom: 15px;
-            font-size: 1.4em;
-        }
-
-        .routine-meta {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 15px;
-        }
-
-        .meta-item {
-            background: white;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-            border-left: 4px solid #667eea;
-        }
-
-        .meta-item .number {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: #667eea;
-            display: block;
-        }
-
-        .meta-item .label {
-            font-size: 0.9em;
-            color: #6c757d;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .exercises {
-            padding: 30px;
-        }
-
-        .exercise {
-            margin-bottom: 40px;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-        }
-
-        .exercise-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .exercise-number {
-            background: rgba(255,255,255,0.2);
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-
-        .exercise-title {
-            flex: 1;
-            margin-left: 20px;
-        }
-
-        .exercise-title h3 {
-            font-size: 1.5em;
-            margin-bottom: 5px;
-        }
-
-        .exercise-title .muscles {
-            font-size: 0.9em;
-            opacity: 0.8;
-            font-style: italic;
-        }
-
-        .sets-reps {
-            background: rgba(255,255,255,0.1);
-            padding: 10px 15px;
-            border-radius: 20px;
-            font-weight: bold;
-            font-size: 1.1em;
-        }
-
-        .exercise-content {
-            background: white;
-            padding: 25px;
-        }
-
-        .form-cues {
-            margin-bottom: 20px;
-        }
-
-        .form-cues h4 {
-            color: #495057;
-            margin-bottom: 12px;
-            font-size: 1.1em;
-            border-bottom: 2px solid #e9ecef;
-            padding-bottom: 5px;
-        }
-
-        .cue-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .cue-list li {
-            padding: 8px 0;
-            padding-left: 25px;
-            position: relative;
-            font-size: 0.95em;
-            line-height: 1.5;
-        }
-
-        .cue-list li:before {
-            content: "✓";
-            position: absolute;
-            left: 0;
-            color: #28a745;
-            font-weight: bold;
-        }
-
-        .special-note {
-            background: #fff3cd;
-            border: 1px solid #ffeaa7;
-            border-radius: 8px;
-            padding: 15px;
-            margin-top: 15px;
-        }
-
-        .special-note h5 {
-            color: #856404;
-            margin-bottom: 8px;
-            font-size: 1em;
-        }
-
-        .special-note p {
-            color: #856404;
-            margin: 0;
-            font-size: 0.9em;
-        }
-
-        .footer {
-            background: #f8f9fa;
-            padding: 25px 30px;
-            text-align: center;
-            border-top: 3px solid #667eea;
-        }
-
-        .footer h3 {
-            color: #667eea;
-            margin-bottom: 10px;
-        }
-
-        .footer p {
-            color: #6c757d;
-            font-size: 0.95em;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #2c3e50; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); min-height: 100vh; padding: 20px; }
+        .container { max-width: 800px; margin: 0 auto; background: white; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden; }
+        .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 30px; text-align: center; }
+        .header h1 { font-size: 2.5em; margin-bottom: 10px; font-weight: 700; }
+        .header p { font-size: 1.2em; opacity: 0.9; }
+        .routine-info { background: #f8f9fa; padding: 20px 30px; border-bottom: 3px solid #667eea; }
+        .routine-info h2 { color: #667eea; margin-bottom: 15px; font-size: 1.4em; }
+        .routine-meta { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 15px; }
+        .meta-item { background: white; padding: 15px; border-radius: 8px; text-align: center; border-left: 4px solid #667eea; }
+        .meta-item .number { font-size: 1.8em; font-weight: bold; color: #667eea; display: block; }
+        .meta-item .label { font-size: 0.9em; color: #6c757d; text-transform: uppercase; letter-spacing: 0.5px; }
+        .exercises { padding: 30px; }
+        .exercise { margin-bottom: 40px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.08); }
+        .exercise-header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 20px; display: flex; align-items: center; justify-content: space-between; }
+        .exercise-number { background: rgba(255,255,255,0.2); width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.2em; }
+        .exercise-title { flex: 1; margin-left: 20px; }
+        .exercise-title h3 { font-size: 1.5em; margin-bottom: 5px; }
+        .exercise-title .muscles { font-size: 0.9em; opacity: 0.8; font-style: italic; }
+        .sets-reps { background: rgba(255,255,255,0.1); padding: 10px 15px; border-radius: 20px; font-weight: bold; font-size: 1.1em; }
+        .exercise-content { background: white; padding: 25px; }
+        .form-cues { margin-bottom: 20px; }
+        .form-cues h4 { color: #495057; margin-bottom: 12px; font-size: 1.1em; border-bottom: 2px solid #e9ecef; padding-bottom: 5px; }
+        .cue-list { list-style: none; padding: 0; }
+        .cue-list li { padding: 8px 0; padding-left: 25px; position: relative; font-size: 0.95em; line-height: 1.5; }
+        .cue-list li:before { content: "✓"; position: absolute; left: 0; color: #28a745; font-weight: bold; }
+        .special-note { background: #fff3cd; border: 1px solid #ffeaa7; border-radius: 8px; padding: 15px; margin-top: 15px; }
+        .special-note h5 { color: #856404; margin-bottom: 8px; font-size: 1em; }
+        .special-note p { color: #856404; margin: 0; font-size: 0.9em; }
+        .footer { background: #f8f9fa; padding: 25px 30px; text-align: center; border-top: 3px solid #667eea; }
+        .footer h3 { color: #667eea; margin-bottom: 10px; }
+        .footer p { color: #6c757d; font-size: 0.95em; }
         @media (max-width: 600px) {
-            .header h1 {
-                font-size: 2em;
-            }
-            
-            .exercise-header {
-                flex-direction: column;
-                text-align: center;
-                gap: 15px;
-            }
-            
-            .exercise-title {
-                margin-left: 0;
-            }
+            .header h1 { font-size: 2em; }
+            .exercise-header { flex-direction: column; text-align: center; gap: 15px; }
+            .exercise-title { margin-left: 0; }
         }
     </style>
 </head>
@@ -246,22 +54,10 @@
         <div class="routine-info">
             <h2>Workout Overview</h2>
             <div class="routine-meta">
-                <div class="meta-item">
-                    <span class="number">10-15</span>
-                    <span class="label">Minutes</span>
-                </div>
-                <div class="meta-item">
-                    <span class="number">3</span>
-                    <span class="label">Exercises</span>
-                </div>
-                <div class="meta-item">
-                    <span class="number">Daily</span>
-                    <span class="label">Frequency</span>
-                </div>
-                <div class="meta-item">
-                    <span class="number">20lb</span>
-                    <span class="label">Dumbbell</span>
-                </div>
+                <div class="meta-item"><span class="number">10-15</span><span class="label">Minutes</span></div>
+                <div class="meta-item"><span class="number">3</span><span class="label">Exercises</span></div>
+                <div class="meta-item"><span class="number">Daily</span><span class="label">Frequency</span></div>
+                <div class="meta-item"><span class="number">20lb</span><span class="label">Dumbbell</span></div>
             </div>
             <p><strong>Focus:</strong> Build strength, improve posture, and enhance functional fitness with knee-friendly modifications.</p>
         </div>
@@ -270,7 +66,7 @@
             <div class="exercise">
                 <div class="exercise-header">
                     <div class="exercise-number">1</div>
-                    <div class="exercise-title">
+                    <div className="exercise-title">
                         <h3>Goblet Squats</h3>
                         <div class="muscles">Legs • Glutes • Core</div>
                     </div>
@@ -359,4 +155,3 @@
     </div>
 </body>
 </html>
-
