--- a/pages/cat.Lifestyle/dumbell-routine/index.html
+++ b/pages/cat.Lifestyle/dumbell-routine/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Dumbbell Routine - 20lb Workout</title>
+    <title>Full Body 20lb Dumbbell Routine</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #2c3e50; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); min-height: 100vh; padding: 20px; }
-        .container { max-width: 800px; margin: 0 auto; background: white; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden; }
+        .container { max-width: 900px; margin: 0 auto; background: white; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden; }
         .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 30px; text-align: center; }
         .header h1 { font-size: 2.5em; margin-bottom: 10px; font-weight: 700; }
         .header p { font-size: 1.2em; opacity: 0.9; }
@@ -26,7 +26,6 @@
         .exercise-title .muscles { font-size: 0.9em; opacity: 0.8; font-style: italic; }
         .sets-reps { background: rgba(255,255,255,0.1); padding: 10px 15px; border-radius: 20px; font-weight: bold; font-size: 1.1em; }
         .exercise-content { background: white; padding: 25px; }
-        .form-cues { margin-bottom: 20px; }
         .form-cues h4 { color: #495057; margin-bottom: 12px; font-size: 1.1em; border-bottom: 2px solid #e9ecef; padding-bottom: 5px; }
         .cue-list { list-style: none; padding: 0; }
         .cue-list li { padding: 8px 0; padding-left: 25px; position: relative; font-size: 0.95em; line-height: 1.5; }
@@ -47,46 +46,40 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Daily Dumbbell Routine</h1>
-            <p>20lb Dumbbell Workout Plan</p>
+            <h1>Full Body Dumbbell Routine</h1>
+            <p>One 20lb Dumbbell • 3x Per Week</p>
         </div>
 
         <div class="routine-info">
             <h2>Workout Overview</h2>
             <div class="routine-meta">
-                <div class="meta-item"><span class="number">10-15</span><span class="label">Minutes</span></div>
-                <div class="meta-item"><span class="number">3</span><span class="label">Exercises</span></div>
-                <div class="meta-item"><span class="number">Daily</span><span class="label">Frequency</span></div>
+                <div class="meta-item"><span class="number">30–40</span><span class="label">Minutes</span></div>
+                <div class="meta-item"><span class="number">8</span><span class="label">Exercises</span></div>
+                <div class="meta-item"><span class="number">3x</span><span class="label">Weekly</span></div>
                 <div class="meta-item"><span class="number">20lb</span><span class="label">Dumbbell</span></div>
             </div>
-            <p><strong>Focus:</strong> Build strength, improve posture, and enhance functional fitness with knee-friendly modifications.</p>
+            <p><strong>Focus:</strong> Build muscle, improve posture, and burn fat with a progressive full-body plan designed for minimal equipment.</p>
         </div>
 
         <div class="exercises">
+            <!-- Lower Body -->
             <div class="exercise">
                 <div class="exercise-header">
                     <div class="exercise-number">1</div>
-                    <div className="exercise-title">
-                        <h3>Goblet Squats</h3>
+                    <div class="exercise-title">
+                        <h3>Goblet Squat</h3>
                         <div class="muscles">Legs • Glutes • Core</div>
                     </div>
-                    <div class="sets-reps">3 sets × 12 reps</div>
+                    <div class="sets-reps">3 × 10–15</div>
                 </div>
                 <div class="exercise-content">
                     <div class="form-cues">
                         <h4>Proper Form</h4>
                         <ul class="cue-list">
-                            <li>Hold dumbbell vertically at chest level, elbows down</li>
-                            <li>Feet shoulder-width apart, toes slightly turned out</li>
-                            <li>Keep chest up and core engaged throughout movement</li>
-                            <li>Lower by pushing hips back and down, knees track over toes</li>
-                            <li>Descend to comfortable depth (thighs parallel to floor if able)</li>
-                            <li>Drive through heels to return to starting position</li>
+                            <li>Hold dumbbell vertically at chest level</li>
+                            <li>Lower slowly for 3 seconds, drive up with control</li>
+                            <li>Keep chest up and core braced</li>
                         </ul>
-                    </div>
-                    <div class="special-note">
-                        <h5>⚠️ Knee-Friendly Modifications</h5>
-                        <p>Focus on even weight distribution. Reduce depth if knee discomfort occurs. Stop at any point where you feel stable and comfortable. Prioritize controlled movement over depth.</p>
                     </div>
                 </div>
             </div>
@@ -95,62 +88,135 @@
                 <div class="exercise-header">
                     <div class="exercise-number">2</div>
                     <div class="exercise-title">
-                        <h3>Standing Dumbbell Rows</h3>
-                        <div class="muscles">Back • Biceps • Posture</div>
+                        <h3>Romanian Deadlift</h3>
+                        <div class="muscles">Hamstrings • Glutes • Lower Back</div>
                     </div>
-                    <div class="sets-reps">3 sets × 10-12 per arm</div>
+                    <div class="sets-reps">3 × 12</div>
                 </div>
                 <div class="exercise-content">
-                    <div class="form-cues">
-                        <h4>Proper Form</h4>
-                        <ul class="cue-list">
-                            <li>Stand with feet hip-width apart, slight bend in knees</li>
-                            <li>Hinge at hips, lean forward 45-60 degrees</li>
-                            <li>Hold dumbbell in one hand, other hand on hip for support</li>
-                            <li>Start with arm extended, pull elbow back close to body</li>
-                            <li>Squeeze shoulder blade, lift elbow toward ceiling</li>
-                            <li>Lower with control, feel stretch in back and shoulders</li>
-                        </ul>
+                    <ul class="cue-list">
+                        <li>Hold dumbbell in both hands in front of thighs</li>
+                        <li>Hinge at hips, slight bend in knees</li>
+                        <li>Lower until you feel hamstring stretch, then return</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Push -->
+            <div class="exercise">
+                <div class="exercise-header">
+                    <div class="exercise-number">3</div>
+                    <div class="exercise-title">
+                        <h3>One-Arm Floor Press</h3>
+                        <div class="muscles">Chest • Triceps • Shoulders</div>
                     </div>
-                    <div class="special-note">
-                        <h5>💡 Form Tips</h5>
-                        <p>Keep core tight to protect lower back. Focus on pulling with your back muscles, not just your arm. Complete all reps on one side before switching.</p>
-                    </div>
+                    <div class="sets-reps">3 × 10 each side</div>
+                </div>
+                <div class="exercise-content">
+                    <ul class="cue-list">
+                        <li>Lie on floor, dumbbell in one hand</li>
+                        <li>Press weight up until arm is straight</li>
+                        <li>Lower slowly, keeping elbow at ~45°</li>
+                    </ul>
                 </div>
             </div>
 
             <div class="exercise">
                 <div class="exercise-header">
-                    <div class="exercise-number">3</div>
+                    <div class="exercise-number">4</div>
                     <div class="exercise-title">
-                        <h3>Dumbbell Overhead Press</h3>
+                        <h3>One-Arm Overhead Press</h3>
                         <div class="muscles">Shoulders • Triceps • Core</div>
                     </div>
-                    <div class="sets-reps">3 sets × 8-10 per arm</div>
+                    <div class="sets-reps">3 × 8–10 each side</div>
                 </div>
                 <div class="exercise-content">
-                    <div class="form-cues">
-                        <h4>Proper Form</h4>
-                        <ul class="cue-list">
-                            <li>Stand tall with feet shoulder-width apart</li>
-                            <li>Hold dumbbell at shoulder level, palm facing forward</li>
-                            <li>Keep core tight and avoid arching back</li>
-                            <li>Press weight straight up, fully extending arm overhead</li>
-                            <li>Lower with control back to shoulder level</li>
-                            <li>Keep wrist straight and elbow under the weight</li>
-                        </ul>
+                    <ul class="cue-list">
+                        <li>Start with dumbbell at shoulder height</li>
+                        <li>Press straight overhead, avoid leaning</li>
+                        <li>Lower under control</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Pull -->
+            <div class="exercise">
+                <div class="exercise-header">
+                    <div class="exercise-number">5</div>
+                    <div class="exercise-title">
+                        <h3>One-Arm Row</h3>
+                        <div class="muscles">Back • Lats • Biceps</div>
                     </div>
-                    <div class="special-note">
-                        <h5>💡 Form Tips</h5>
-                        <p>If balance is challenging, perform seated or with back against wall for support. Focus on pressing straight up, not forward. Complete all reps on one side before switching.</p>
+                    <div class="sets-reps">3 × 10–12 each side</div>
+                </div>
+                <div class="exercise-content">
+                    <ul class="cue-list">
+                        <li>Brace free hand on knee or chair</li>
+                        <li>Pull dumbbell toward ribcage</li>
+                        <li>Lower slowly and fully extend arm</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="exercise">
+                <div class="exercise-header">
+                    <div class="exercise-number">6</div>
+                    <div class="exercise-title">
+                        <h3>Hammer Curl</h3>
+                        <div class="muscles">Biceps • Forearms</div>
                     </div>
+                    <div class="sets-reps">3 × 10–12 each side</div>
+                </div>
+                <div class="exercise-content">
+                    <ul class="cue-list">
+                        <li>Hold dumbbell with palms facing in</li>
+                        <li>Curl slowly, squeeze at top</li>
+                        <li>Lower with control</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Core -->
+            <div class="exercise">
+                <div class="exercise-header">
+                    <div class="exercise-number">7</div>
+                    <div class="exercise-title">
+                        <h3>Russian Twist</h3>
+                        <div class="muscles">Obliques • Core</div>
+                    </div>
+                    <div class="sets-reps">3 × 20 twists</div>
+                </div>
+                <div class="exercise-content">
+                    <ul class="cue-list">
+                        <li>Sit on floor, lean back slightly</li>
+                        <li>Rotate torso side to side holding dumbbell</li>
+                        <li>Control the motion, avoid swinging</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="exercise">
+                <div class="exercise-header">
+                    <div class="exercise-number">8</div>
+                    <div class="exercise-title">
+                        <h3>Loaded Carry</h3>
+                        <div class="muscles">Core • Grip • Posture</div>
+                    </div>
+                    <div class="sets-reps">3 × 30–40 sec each side</div>
+                </div>
+                <div class="exercise-content">
+                    <ul class="cue-list">
+                        <li>Hold dumbbell at your side</li>
+                        <li>Walk slowly with upright posture</li>
+                        <li>Switch hands and repeat</li>
+                    </ul>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            <h3>Daily Routine Complete!</h3>
-            <p>Perform with controlled form every day. Listen to your body and modify as needed for comfort and safety. Consistent daily practice builds strength and improves functional fitness efficiently.</p>
+            <h3>Routine Complete!</h3>
+            <p>Perform this workout 3x per week with at least 1 rest day in between. Track reps, add reps or slow tempo to progress. Combine with your IF schedule for best results.</p>
         </div>
     </div>
 </body>
