--- a/pages/cat.Optics & Design/crop/index.html
+++ b/pages/cat.Optics & Design/crop/index.html
@@ -1,17 +1,34 @@
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ultimate Crop Tool</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ultimate Crop Tool — Fast</title>
+  <!-- React 18 production UMD (no Babel) -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* Small splash to show the hover affordance on load */
+    .drop-zone.pulse::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: 12px;
+      box-shadow: 0 0 0 0 rgba(0, 255, 136, 0.5);
+      animation: dzPulse 1.6s ease-out 2;
+      pointer-events: none;
+    }
+    @keyframes dzPulse {
+      0% { box-shadow: 0 0 0 0 rgba(0, 255, 136, 0.5); }
+      70% { box-shadow: 0 0 0 14px rgba(0, 255, 136, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(0, 255, 136, 0); }
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/babel" src="components.js"></script>
-  <script type="text/babel" src="utils.js"></script>
-  <script type="text/babel" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
